# bookstore-inventory-api

./: .gitignore  AGENTS.md  README.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.test.yml  pyproject.toml
Docker/local/: Dockerfile  entrypoint.sh
alembic/: env.py
alembic/versions/: 0fda96a1f8de_creacion_de_las_tablas_roles_permisos_y_.py  28693bb42724_creacion_tabla_de_books.py
app/: deps.py  exceptions.py  main.py
app/api/: __init__.py  books.py  permissions.py
app/db/: sessions.py
app/models/: __init__.py  api_response.py  book.py  permissions.py  roles.py
app/repositories/: __init__.py  book_repository.py  permissions_repository.py
app/services/: __init__.py
app/services/book/: __init__.py  book_service.py  calculate_price.py  create_book.py  delete_book.py  get_book.py  update_book.py
app/services/permissions/: __init__.py  actualizar_producto.py  create.py  eliminar_producto.py  get.py  producto_service.py
shared/: config.py
tests/: conftest.py
tests/repositories/: test_book_repository.py  test_producto_repository.py
tests/services/: test_calculate_price.py  test_crear_producto.py  test_create_book.py  test_delete_book.py  test_eliminar_producto.py  test_get_book.py  test_leer_producto.py  test_update_book.py
