[project]
name = "bookstore-inventory-backend"
version = "0.1.0"
description = "FastAPI backend for chronic patients management"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlmodel==0.0.22",
    "psycopg2-binary==2.9.10",
    "alembic==1.13.3",
    "asyncpg>=0.31.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[tool.ruff.lint]
select = ["F401"]
fixable = ["F401"]
