[project]
name = "bookstore-inventory-backend"
version = "1.0.0"
description = "Sistema de gestión de inventario para una cadena de librerías"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlmodel==0.0.22",
    "psycopg2-binary==2.9.10",
    "alembic==1.13.3",
    "asyncpg>=0.31.0",
    "httpx>=0.27.0",
    "starlette>=0.37.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.3.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.ruff.lint]
select = ["F401"]
fixable = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
